third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/duplicate_method.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        type T;
        fn t_method(&self);
        fn t_method(&self);
    }
}

#[cxx::bridge]
mod ffi {
    extern "Rust" {
        type U;
        fn u_method(&self);
        fn u_method(&mut self);
    }
}

fn main() {}
